Fixed spacing on modal selections

--- a/src/style.css
+++ b/src/style.css
@@ -125,7 +125,7 @@ li{
     align-items:center;
 }
 .modal-option-choices{
-    margin:2.5rem 0;
+    margin:4rem 0;
 }
 .modal-btn{
     background-color:lightblue;
